# rust-nation-sam-lambda

./: .env  .gitignore  Cargo.toml  README.md  template.yml
src/: main.rs
